# sub-lator

./: .gitignore  Why Obsidian.txt  activate_env.bat  main.py  pyproject.toml  readme.md  requirements.txt
src/core/: api_key_manager.py  api_provider.py  assembly_key_storage.py  async_utils.py  groq_key_storage.py  groq_transcription_service.py  groq_translation_service.py  key_importer.py  key_storage.py  processing_time_tracker.py  subtitle_synchronizer.py  translation_service.py  whisper_synchronizer.py
src/gui/: drop_area.py  main_window.py  srt_generation_view.py  translation_view.py  video_drop_area.py
src/gui/components/: toast.py
src/utils/: __init__.py  time_tracker.py
